// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Component - Functional Tests matches snapshot for basic tabs 1`] = `
<div
  data-orientation="horizontal"
  dir="ltr"
>
  <div
    aria-orientation="horizontal"
    class="bg-muted text-GRAY_700 inline-flex h-6 items-center justify-center gap-1 rounded"
    data-orientation="horizontal"
    role="tablist"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-controls="radix-_r_9_-content-tab1"
      aria-selected="true"
      class="ring-offset-background focus-visible:ring-ring data-[state=active]:bg-BG_WHITE data-[state=active]:text-GRAY_1000 data-[state=active]:ring-border hover:bg-accent inline-flex h-6 cursor-pointer items-center justify-center rounded px-3 py-1 text-sm font-medium whitespace-nowrap transition-all focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-hidden disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm data-[state=active]:ring-1"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="active"
      id="radix-_r_9_-trigger-tab1"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="radix-_r_9_-content-tab2"
      aria-selected="false"
      class="ring-offset-background focus-visible:ring-ring data-[state=active]:bg-BG_WHITE data-[state=active]:text-GRAY_1000 data-[state=active]:ring-border hover:bg-accent inline-flex h-6 cursor-pointer items-center justify-center rounded px-3 py-1 text-sm font-medium whitespace-nowrap transition-all focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-hidden disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm data-[state=active]:ring-1"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="inactive"
      id="radix-_r_9_-trigger-tab2"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
  </div>
  <div
    aria-labelledby="radix-_r_9_-trigger-tab1"
    class="ring-offset-background focus-visible:ring-ring mt-2 focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-hidden"
    data-orientation="horizontal"
    data-state="active"
    id="radix-_r_9_-content-tab1"
    role="tabpanel"
    style="animation-duration: 0s;"
    tabindex="0"
  >
    Content 1
  </div>
  <div
    aria-labelledby="radix-_r_9_-trigger-tab2"
    class="ring-offset-background focus-visible:ring-ring mt-2 focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-hidden"
    data-orientation="horizontal"
    data-state="inactive"
    hidden=""
    id="radix-_r_9_-content-tab2"
    role="tabpanel"
    tabindex="0"
  />
</div>
`;

exports[`Tabs Component - Functional Tests matches snapshot for tabs with custom classes 1`] = `
<div
  class="custom-tabs"
  data-orientation="horizontal"
  dir="ltr"
>
  <div
    aria-orientation="horizontal"
    class="bg-muted text-GRAY_700 inline-flex h-6 items-center justify-center gap-1 rounded custom-list"
    data-orientation="horizontal"
    role="tablist"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-controls="radix-_r_c_-content-tab1"
      aria-selected="true"
      class="ring-offset-background focus-visible:ring-ring data-[state=active]:bg-BG_WHITE data-[state=active]:text-GRAY_1000 data-[state=active]:ring-border hover:bg-accent inline-flex h-6 cursor-pointer items-center justify-center rounded px-3 py-1 text-sm font-medium whitespace-nowrap transition-all focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-hidden disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm data-[state=active]:ring-1 custom-trigger"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="active"
      id="radix-_r_c_-trigger-tab1"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Styled Tab
    </button>
  </div>
  <div
    aria-labelledby="radix-_r_c_-trigger-tab1"
    class="ring-offset-background focus-visible:ring-ring mt-2 focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-hidden custom-content"
    data-orientation="horizontal"
    data-state="active"
    id="radix-_r_c_-content-tab1"
    role="tabpanel"
    style="animation-duration: 0s;"
    tabindex="0"
  >
    Styled Content
  </div>
</div>
`;

exports[`Tabs Component - Functional Tests matches snapshot for tabs with multiple triggers 1`] = `
<div
  data-orientation="horizontal"
  dir="ltr"
>
  <div
    aria-orientation="horizontal"
    class="bg-muted text-GRAY_700 inline-flex h-6 items-center justify-center gap-1 rounded"
    data-orientation="horizontal"
    role="tablist"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-controls="radix-_r_e_-content-tab1"
      aria-selected="true"
      class="ring-offset-background focus-visible:ring-ring data-[state=active]:bg-BG_WHITE data-[state=active]:text-GRAY_1000 data-[state=active]:ring-border hover:bg-accent inline-flex h-6 cursor-pointer items-center justify-center rounded px-3 py-1 text-sm font-medium whitespace-nowrap transition-all focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-hidden disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm data-[state=active]:ring-1"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="active"
      id="radix-_r_e_-trigger-tab1"
      role="tab"
      tabindex="-1"
      type="button"
    >
      First
    </button>
    <button
      aria-controls="radix-_r_e_-content-tab2"
      aria-selected="false"
      class="ring-offset-background focus-visible:ring-ring data-[state=active]:bg-BG_WHITE data-[state=active]:text-GRAY_1000 data-[state=active]:ring-border hover:bg-accent inline-flex h-6 cursor-pointer items-center justify-center rounded px-3 py-1 text-sm font-medium whitespace-nowrap transition-all focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-hidden disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm data-[state=active]:ring-1"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="inactive"
      id="radix-_r_e_-trigger-tab2"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Second
    </button>
    <button
      aria-controls="radix-_r_e_-content-tab3"
      aria-selected="false"
      class="ring-offset-background focus-visible:ring-ring data-[state=active]:bg-BG_WHITE data-[state=active]:text-GRAY_1000 data-[state=active]:ring-border hover:bg-accent inline-flex h-6 cursor-pointer items-center justify-center rounded px-3 py-1 text-sm font-medium whitespace-nowrap transition-all focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-hidden disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm data-[state=active]:ring-1"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="inactive"
      id="radix-_r_e_-trigger-tab3"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Third
    </button>
    <button
      aria-controls="radix-_r_e_-content-tab4"
      aria-selected="false"
      class="ring-offset-background focus-visible:ring-ring data-[state=active]:bg-BG_WHITE data-[state=active]:text-GRAY_1000 data-[state=active]:ring-border hover:bg-accent inline-flex h-6 cursor-pointer items-center justify-center rounded px-3 py-1 text-sm font-medium whitespace-nowrap transition-all focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-hidden disabled:pointer-events-none disabled:opacity-50 data-[state=active]:shadow-sm data-[state=active]:ring-1"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="inactive"
      id="radix-_r_e_-trigger-tab4"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Fourth
    </button>
  </div>
  <div
    aria-labelledby="radix-_r_e_-trigger-tab1"
    class="ring-offset-background focus-visible:ring-ring mt-2 focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-hidden"
    data-orientation="horizontal"
    data-state="active"
    id="radix-_r_e_-content-tab1"
    role="tabpanel"
    style="animation-duration: 0s;"
    tabindex="0"
  >
    First Content
  </div>
  <div
    aria-labelledby="radix-_r_e_-trigger-tab2"
    class="ring-offset-background focus-visible:ring-ring mt-2 focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-hidden"
    data-orientation="horizontal"
    data-state="inactive"
    hidden=""
    id="radix-_r_e_-content-tab2"
    role="tabpanel"
    tabindex="0"
  />
  <div
    aria-labelledby="radix-_r_e_-trigger-tab3"
    class="ring-offset-background focus-visible:ring-ring mt-2 focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-hidden"
    data-orientation="horizontal"
    data-state="inactive"
    hidden=""
    id="radix-_r_e_-content-tab3"
    role="tabpanel"
    tabindex="0"
  />
  <div
    aria-labelledby="radix-_r_e_-trigger-tab4"
    class="ring-offset-background focus-visible:ring-ring mt-2 focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:outline-hidden"
    data-orientation="horizontal"
    data-state="inactive"
    hidden=""
    id="radix-_r_e_-content-tab4"
    role="tabpanel"
    tabindex="0"
  />
</div>
`;
